# android-demo-app

PyTorchDemoApp/app/: CMakeLists.txt  build.gradle
PyTorchDemoApp/app/src/main/assets/: ultranet-slim-320-jit-3.pt  ultranet-slim-320-jit.pt
PyTorchDemoApp/app/src/main/java/org/pytorch/demo/: FaceDetectorNative.java  InfoViewFactory.java  TensorImageUtilsCopy.java
PyTorchDemoApp/app/src/main/java/org/pytorch/demo/vision/: AbstractCameraXActivity.java  ImageClassificationActivity.java  VisionListActivity.java
PyTorchDemoApp/app/src/main/jni/: facedetectornative.cpp  ultraface.cpp  ultraface.hpp
PyTorchDemoApp/app/src/main/res/drawable/: ic_vision_purp.xml
PyTorchDemoApp/app/src/main/res/layout/: activity_image_classification.xml  surface_view.xml  vision_list_content.xml
PyTorchDemoApp/app/src/main/res/values/: strings.xml
